*** 20011129_5 by db
- committed tobys undline/ungline patch



*** 20011129_4 by db
- minor formatting changes in s_conf.c
  plus removed annoying "noise" 
- stats r fix submitted by jv



*** 20011129_3 by db
- fixed order of STATS Q line



*** 20011129_2 by db
- fixed numeric orders. Apparently someone had already fixed KLINE



*** 20011129_1 by db
- since the old code did a ++addr_count then compared to RES_MAXADDRS,
  it would not find any ip's, depending on the compilers interpretation
  of sequence points. Its quite possible, it would have resolved on sunpro
  compiler, but it sure does not on freebsd gcc.



*** 20011128_1 by lusky
- revved patchlevel to 6.2.1rc2
- another spoofing fix


*** 20011126_1 by db
- Stupid bug in m_gline.c found by David-T, committing before it gets lost



*** 20011121_2 by db
- A bogus numeric would not be cool.



*** 20011121_1 by db
- Make res.c resolve again



*** 20011119_1 by db
- removed trailing \002



*** 20011117_1 by greg
Yes, I'm doing the unthinkable, commiting against -6..

(Pending flames I get from this, there will be 1, maybe 2 more bugfixes
in the next little while..)

- Removed bold from a server notice -- that's silly. (thanks Kimy)


*** 20011115_1 by leeh
- moved the CHANMODE_E check up a level - before we add the +e to the list
  ;)


*** 20011106_2 by wcampbel
Corrected


*** 20011106_1 by wcampbel
Doc change:  | in KLINE (approved by Diane)


*** 20011028_1 by db
- fixed typo



*** 20011027_5 by bill
- cosmetic fix changed [] to () in failed oper notice


*** 20011027_4 by bill
- will now compile.  we were missing two "*/"s in do_query_number()


*** 20011027_3 by bill
- pro died, he shouldn't be in the Hybrid-team


*** 20011027_2 by db
- removed another typedef 



*** 20011027_1 by db
- some res.c fixes



*** 20011025_2 by db
- fixed formatting in s_conf.c
- removed obsfuscation in res.c



*** 20011025_1 by leeh
- as discussed on IRC.


*** 20011024_3 by wcampbel