@@ -1,3 +1,9 @@
+*** 20011129_6 by db
+- applied jvs m_pong.c patch
+- removed unnecessary clock failure test
+
+
+
 *** 20011129_5 by db
 - committed tobys undline/ungline patch
 
